@@ -8,31 +8,11 @@
 ##################################
 
 
-rageAgainstTheSupportVectorMachine <-function(dataset, modelName) {
+rageAgainstTheSupportVectorMachine <-function(dataset, modelName, poly, bestGamma, bestCost) {
 
+    library(e1071)  #get the e1071 library, which accesses libsvm
 
-   library(e1071)  #get the e1071 library, which accesses libsvm
-
-   #first tune, the model using a grid search over gamma and cost to find
-   #the best results
-   #V1 should be the labeled column, I dunno if that is a stable name though
-   #I've also seen it get called X1 --- I'm hoping that was because it was
-   #a derived data frame
-
-   tuned <- tune.svm(V1~., data = dataset, kernel="polynomial", gamma = 10^(-6:-1), cost = 10^(-1:1))
-   
-   #C-classification is the default
-   #the polynomial goes as (X + C)^p
-   # default C is 0, default p is 3
-   #gamma indicates the range of gammas to try, 10^-6, 10^-5, ...10^1
-   #same with cost, 0.1, 1, 10
-
-   print(summary(tuned))
-
-   bestGamma <- tuned$best.parameters[[1]] #get best gamma
-   bestCost  <- tuned$best.parameters[[2]] #get best cost
-
-    model <- svm(V1~., data = dataset, type = "C-classification", kernel="polynomial", gamma = bestGamma, cost = bestCost, cross = 10, probability = FALSE)
+    model <- svm(V1~., data = dataset, type = "C-classification", kernel="polynomial", degree = poly, coef0 = 0.5, gamma = bestGamma, cost = bestCost, cross = 10, probability = TRUE)
     #most of these are the same as for tune, but this actually
     #builds the SVM with the gamma and cost we feed in
     #cross is some sort of cross validation checking
@@ -42,40 +22,75 @@ rageAgainstTheSupportVectorMachine <-function(dataset, modelName) {
     #I don't really understand the output though, it isn't just giving me 
     #a predicted digit
 
-   print(summary(model))
-   return(model)
+    print(summary(model))
+    return(model)
 
-} #end of rageAgainstTheSupportVectorMachine
-
-
-#will add function to do prediction on actual test dataset
-
+} #end of rageAgainstTheSupportVectorMachine, which is largely useless now
 
 
 #this handles testing the machine on the training sub-test data and printed a graph and prediction matrix
 validateMachine <-function(model, testFrame, modelName) {
 
-   prediction <- predict(model, testFrame, decision.values = FALSE, probability = FALSE)
+   prediction <- predict(model, testFrame, decision.values = FALSE, probability = TRUE)
    #this actually applies the model to the test sub-dataset
 
    #tab <- table(pred = prediction, true = testFrame$V1)
    tab <- table(prediction, testFrame$V1)   
    #this produces a table of prediction versus actually
 
+   accuracy <- 0
+   tabMatrix <- data.matrix(tab)
+   for(i in 1:nrow(tabMatrix)) {
+        accuracy <- accuracy + tabMatrix[i, i]
+    }
+    accuracy <- 100.0*accuracy/nrow(testFrame)
+    cat(c(modelName, " validation accuracy is ", accuracy, "%\n"))
+    cat("Sterling Archer voice: \"Which sucks, Lana. Do better.\" \n")
+
 #   drawPredictionTruthTable(tab)   # just prints the table 
    drawPerformanceMatrix(tab, paste(c("prediction_table", modelName, "png"), collapse="."))
    write.table(tab, file=paste(c("prediction_table", modelName, "txt"), collapse="."))
 
-return(which(prediction != testFrame[[1]]))
+   #return(which(prediction != testFrame[[1]]))
 
+   compareFrame <- as.data.frame(cbind(testFrame[,1],prediction))
+   compareFrame <- compareFrame[which(prediction != testFrame[[1]]),]
 
-
+   return(compareFrame)
 } #end of  validateMachine
 
 
+#sets up model to be tuned in terms of cost and gamma (if needed)
+tuneMachine <-function(dataset, tunePercent) {
+
+  #first tune, the model using a grid search over gamma and cost to find
+   #the best results
+   #V1 should be the labeled column, I dunno if that is a stable name though
+   #I've also seen it get called X1 --- I'm hoping that was because it was
+   #a derived data frame
+
+    indices     <- 1:nrow(dataset)
+    splitdex <- sample(indices, trunc(length(indices)*(tunePercent)/100))
+    subTune  <- dataset[splitdex,]
+   
+    tuned <- tune.svm(V1~., data = dataset, kernel="polynomial", gamma = 10^(-6:-1), cost = 10^(-1:1))
+    print(summary(tuned))
+}#end of tuneMachine
+
+
+#gets the actual support vectors from the model
+getSupportVectors <- function(svmModel, originalTrain) {
+
+    SVs <- row.names(svmModel$SV)
+    SVs <- as.vector(SVs)
+    frameSVs <- originalTrain[SVs, ]
+
+    return(frameSVs)
+}#end of getSupportVectors
 
 
 
+ 
 #virtualRage
 
 
