@@ -1,3 +1,10 @@
+3/1/2013 Jet Goodson <jetgoodson@gmail.com>
+    M utilityBelt.R
+    - added functions to apply jitter and synthesize data
+    - note that is requires installing matrixcalc	
+    M LitteraLector.R
+    - added virtual and synthesized SVM models, more config variables
+
 2/28/2013 Jet Goodson <jetgoodson@gmail.com>
     M visualyze.R
     - added save ability
@@ -5,6 +12,8 @@
     - split into a train and test function
     M LitteraLector.R
     - added ability to save SVM then reload	
+    M utilityBelt.R
+    - added function to split into test and train datasets
 	
 2/28/2013 Jet Goodson <jetgoodson@gmail.com>
     M visualyze.R
